--- a/함께 만드는 순찰출동_자동포함 poi(신정2)_1.html
+++ b/함께 만드는 순찰출동_자동포함 poi(신정2)_1.html
@@ -85,31 +85,31 @@ const lampData = {
 
   "L003": { 분류:"가로등", 고유이름:"L003", 전화번호:"02-2345-4488", 주소:"", 특이사항:"중요", 좌표:"37.391747,126.652425" },
 
-  "CV1": { 분류:"범죄피해자", 고유이름:"CV1", 전화번호:"", 주소:"오목로37길 11(그린빌라 102호)", 특이사항:"25.5.16~25.8.26. 22:00~23:00, 42호)", 좌표:"37.526140,126.856032" },
+  "CV1": { 분류:"범죄피해자", 고유이름:"CV1", 전화번호:"", 주소:"오목로37길", 특이사항:"25.5.16~25.8.26. 22:00~23:00, 42호)", 좌표:"37.526140,126.856032" },
 
-  "CV2": { 분류:"범죄피해자", 고유이름:"CV2", 전화번호:"", 주소:"오목로24길 19-22 2층", 특이사항:"7.5~8.4(매일 22~23시)", 좌표:"37.522740,126.854003" },
+  "CV2": { 분류:"범죄피해자", 고유이름:"CV2", 전화번호:"", 주소:"오목로24길", 특이사항:"7.5~8.4(매일 22~23시)", 좌표:"37.522740,126.854003" },
 
-  "CV3": { 분류:"범죄피해자", 고유이름:"CV3", 전화번호:"", 주소:"오목로34길7, 302호", 특이사항:"7.8~9.7(매일 22~23시)", 좌표:"37.524296,126.855753" },
+  "CV3": { 분류:"범죄피해자", 고유이름:"CV3", 전화번호:"", 주소:"오목로34길", 특이사항:"7.8~9.7(매일 22~23시)", 좌표:"37.524296,126.855753" },
 
-  "CV4": { 분류:"범죄피해자", 고유이름:"CV4", 전화번호:"", 주소:"신목로5 목동삼성아파트 105동 107호", 특이사항:"5.22~8.21(매일 13~14, 22~23)", 좌표:"37.517046,126.876516" },
+  "CV4": { 분류:"범죄피해자", 고유이름:"CV4", 전화번호:"", 주소:"신목로5 목동삼성아파트", 특이사항:"5.22~8.21(매일 13~14, 22~23)", 좌표:"37.517046,126.876516" },
 
-  "CV5": { 분류:"범죄피해자", 고유이름:"CV5", 전화번호:"", 주소:"목돌로23길35 B동 지층", 특이사항:"4.15~8.14(매일 12~13시)", 좌표:"37.527701,126.859364" },
+  "CV5": { 분류:"범죄피해자", 고유이름:"CV5", 전화번호:"", 주소:"목돌로23길", 특이사항:"4.15~8.14(매일 12~13시)", 좌표:"37.527701,126.859364" },
 
   "CV6": { 분류:"범죄피해자", 고유이름:"CV6", 전화번호:"", 주소:"은행정로42 신서고등학교", 특이사항:"6.8~9.7(월~금 8~9, 22~23시)", 좌표:"37.523921,126.860085" },
 
-  "CV7": { 분류:"범죄피해자", 고유이름:"CV7", 전화번호:"", 주소:"목동로11길 33 401(키즈뉴빌리지)", 특이사항:"5.23~8.22(매일 23~24시)", 좌표:"37.522949,126.861280" },
+  "CV7": { 분류:"범죄피해자", 고유이름:"CV7", 전화번호:"", 주소:"목동로11길 )", 특이사항:"5.23~8.22(매일 23~24시)", 좌표:"37.522949,126.861280" },
 
-  "CV8": { 분류:"범죄피해자", 고유이름:"CV8", 전화번호:"", 주소:"중앙로52길 50 201호", 특이사항:"7.15~8.14(매일 9~10, 21~22)", 좌표:"37.525925,126.855922" },
+  "CV8": { 분류:"범죄피해자", 고유이름:"CV8", 전화번호:"", 주소:"중앙로52길", 특이사항:"7.15~8.14(매일 9~10, 21~22)", 좌표:"37.525925,126.855922" },
 
-  "CV9": { 분류:"범죄피해자", 고유이름:"CV9", 전화번호:"", 주소:"목동로19길 31 건향파크빌 402호", 특이사항:"7.8~8.7(순찰미실시)", 좌표:"37.524588,126.861030" },
+  "CV9": { 분류:"범죄피해자", 고유이름:"CV9", 전화번호:"", 주소:"목동로19길", 특이사항:"7.8~8.7(순찰미실시)", 좌표:"37.524588,126.861030" },
 
-  "CV10": { 분류:"범죄피해자", 고유이름:"CV10", 전화번호:"", 주소:"목동로 193 5층(아뜰리에 학원)", 특이사항:"7.19~8.17(11~12, 21~22))", 좌표:"37.525567,126.858867" },
+  "CV10": { 분류:"범죄피해자", 고유이름:"CV10", 전화번호:"", 주소:"목동로 193", 특이사항:"7.19~8.17(11~12, 21~22))", 좌표:"37.525567,126.858867" },
 
-  "CV11": { 분류:"범죄피해자", 고유이름:"CV11", 전화번호:"", 주소:"신목로5길 15 1층(화이트스완)", 특이사항:"7.19~8.18(13~14시)", 좌표:"37.517567,126.872267" },
+  "CV11": { 분류:"범죄피해자", 고유이름:"CV11", 전화번호:"", 주소:"신목로5길", 특이사항:"7.19~8.18(13~14시)", 좌표:"37.517567,126.872267" },
 
-  "CV12": { 분류:"범죄피해자", 고유이름:"CV12", 전화번호:"", 주소:"오목로354 101동 1002호", 특이사항:"7.18~8.17(15~16, 22~23)", 좌표:"37.523919,126.876851" },
+  "CV12": { 분류:"범죄피해자", 고유이름:"CV12", 전화번호:"", 주소:"오목로354 101동", 특이사항:"7.18~8.17(15~16, 22~23)", 좌표:"37.523919,126.876851" },
 
-  "CV13": { 분류:"범죄피해자", 고유이름:"CV13", 전화번호:"", 주소:"오목로300 204동 701", 특이사항:"7.31~8.30(05~06, 19~20)", 좌표:"37.524183,126.870829" },
+  "CV13": { 분류:"범죄피해자", 고유이름:"CV13", 전화번호:"", 주소:"오목로300 204동", 특이사항:"7.31~8.30(05~06, 19~20)", 좌표:"37.524183,126.870829" },
 
   "PP1": { 분류:"공중전화", 고유이름:"PP1", 전화번호:"02-2696-2896", 주소:"목동로 189", 특이사항:"제일은행 앞", 좌표:"37.525392,126.864424" },
 
@@ -395,4 +395,5 @@ window.onload = () => {
 
 </script>
 </body>
+
 </html>
