--- a/함께 만드는 순찰출동_자동포함 poi(신정2)_1.html
+++ b/함께 만드는 순찰출동_자동포함 poi(신정2)_1.html
@@ -107,9 +107,9 @@ const lampData = {
 
   "CV11": { 분류:"범죄피해자", 고유이름:"CV11", 전화번호:"", 주소:"신목로5길", 특이사항:"7.19~8.18(13~14시)", 좌표:"37.517567,126.872267" },
 
-  "CV12": { 분류:"범죄피해자", 고유이름:"CV12", 전화번호:"", 주소:"오목로354 101동", 특이사항:"7.18~8.17(15~16, 22~23)", 좌표:"37.523919,126.876851" },
+  "CV12": { 분류:"범죄피해자", 고유이름:"CV12", 전화번호:"", 주소:"오목로354", 특이사항:"7.18~8.17(15~16, 22~23)", 좌표:"37.523919,126.876851" },
 
-  "CV13": { 분류:"범죄피해자", 고유이름:"CV13", 전화번호:"", 주소:"오목로300 204동", 특이사항:"7.31~8.30(05~06, 19~20)", 좌표:"37.524183,126.870829" },
+  "CV13": { 분류:"범죄피해자", 고유이름:"CV13", 전화번호:"", 주소:"오목로300", 특이사항:"7.31~8.30(05~06, 19~20)", 좌표:"37.524183,126.870829" },
 
   "PP1": { 분류:"공중전화", 고유이름:"PP1", 전화번호:"02-2696-2896", 주소:"목동로 189", 특이사항:"제일은행 앞", 좌표:"37.525392,126.864424" },
 
@@ -397,3 +397,4 @@ window.onload = () => {
 </body>
 
 </html>
+
