--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@ const lampData = {
 
   "L003": { 분류:"가로등", 고유이름:"L003", 전화번호:"02-2345-4488", 주소:"", 특이사항:"중요", 좌표:"37.391747,126.652425" },
 
+  "L004": { 분류:"가로등", 고유이름:"L004", 전화번호:"02-2345-4488", 주소:"", 특이사항:"중요", 좌표:"37.391747,126.652425" },
+
   "CV1": { 분류:"범죄피해자", 고유이름:"CV1", 전화번호:"", 주소:"오목로37길", 특이사항:"25.5.16~25.8.26. 22:00~23:00, 42호)", 좌표:"37.526140,126.856032" },
 
   "CV2": { 분류:"범죄피해자", 고유이름:"CV2", 전화번호:"", 주소:"오목로24길", 특이사항:"7.5~8.4(매일 22~23시)", 좌표:"37.522740,126.854003" },
@@ -143,6 +145,8 @@ const patrolSchedule = [
   { id:"L002", startDate:"2025-05-16", endDate:"2025-08-26", daysOfWeek:[0,1,2,3,4,5,6], timeRanges:[{ start:"11:00", end:"13:00" }] },
 
   { id:"L003", startDate:"2025-05-16", endDate:"2025-08-26", daysOfWeek:[0,1,2,3,4,5,6], timeRanges:[{ start:"11:00", end:"16:00" }] },
+
+  { id:"L004", startDate:"2025-05-16", endDate:"2025-08-26", daysOfWeek:[0,1,2,3,4,5,6], timeRanges:[{ start:"11:00", end:"17:00" }] },
 
   { id:"CV1(42호)", startDate:"2025-05-16", endDate:"2025-08-26", daysOfWeek:[0,1,2,3,4,5,6], timeRanges:[{ start:"22:00", end:"23:00" }] },
 
@@ -397,5 +401,6 @@ window.onload = () => {
 </body>
 
 </html>
+
 
 
