새로고침 60초 마다 기능(브라우져 사용시)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <title>🚓 가로등 위치 기반 현장 출동 시스템 (수동 순찰 버전)</title>
+  <title>특정 poi 기반 출동/순찰 시스템</title>
+  <meta http-equiv="refresh" content="60">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; }
@@ -325,3 +326,4 @@ window.onload=()=>{initMap();showUpcomingPatrols();setInterval(showUpcomingPatro
 
 </body>
 </html>
+
