--- a/index.html
+++ b/index.html
@@ -79,29 +79,29 @@ const lampData = {
 
   "L003": { 분류:"가로등", 고유이름:"L003", 전화번호:"02-2345-4488", 주소:"", 특이사항:"중요", 좌표:"37.387000,126.661000" },
 
-  "CV1(42호)": { 분류:"안전조치", 고유이름:"박00", 전화번호:"", 주소:"오목로37길 11(그린빌라)", 특이사항:"25.5.16~25.8.26. 22:00~23:00, 42호)", 좌표:"37.526140,126.856032" },
+  "CV1(42호)": { 분류:"안전조치", 고유이름:"박00", 전화번호:"", 주소:"오목로37길 11(그린빌라)", 특이사항:"5.16~8.26(매일 22:00~23:00)", 좌표:"37.526140,126.856032" },
 
-  "CV3(43호)": { 분류:"안전조치", 고유이름:"이00", 전화번호:"", 주소:"오목로34길7", 특이사항:"7.8~9.7(매일 22~23시)", 좌표:"37.524296,126.855753" },
+  "CV3(43호)": { 분류:"안전조치", 고유이름:"이00", 전화번호:"", 주소:"오목로34길7", 특이사항:"7.8~9.7(매일 22~23)", 좌표:"37.524296,126.855753" },
 
   "CV4(41호)": { 분류:"안전조치", 고유이름:"박00", 전화번호:"", 주소:"신목로5 목동삼성아파트 105동", 특이사항:"5.22~8.21(매일 13~14, 22~23)", 좌표:"37.517046,126.876516" },
 
-  "CV5(42호)": { 분류:"안전조치", 고유이름:"허00", 전화번호:"", 주소:"목동로23길35", 특이사항:"4.15~8.14(매일 12~13시)", 좌표:"37.527701,126.859364" },
+  "CV5(42호)": { 분류:"안전조치", 고유이름:"허00", 전화번호:"", 주소:"목동로23길35", 특이사항:"4.15~8.14(매일 12~13)", 좌표:"37.527701,126.859364" },
 
-  "CV6(43호)": { 분류:"안전조치", 고유이름:"서00", 전화번호:"", 주소:"은행정로42 신서고등학교", 특이사항:"6.8~9.7(월~금 8~9, 22~23시)", 좌표:"37.523921,126.860085" },
+  "CV6(43호)": { 분류:"안전조치", 고유이름:"서00", 전화번호:"", 주소:"은행정로42 신서고등학교", 특이사항:"6.8~9.7(월~금 8~9, 22~23)", 좌표:"37.523921,126.860085" },
 
-  "CV7(43호)": { 분류:"안전조치", 고유이름:"오00", 전화번호:"", 주소:"목동로11길 33", 특이사항:"5.23~8.22(매일 23~24시)", 좌표:"37.522949,126.861280" },
+  "CV7(43호)": { 분류:"안전조치", 고유이름:"오00", 전화번호:"", 주소:"목동로11길 33", 특이사항:"5.23~8.22(매일 23~24)", 좌표:"37.522949,126.861280" },
 
   "CV8(42호)": { 분류:"안전조치", 고유이름:"강00", 전화번호:"", 주소:"중앙로52길 50", 특이사항:"7.15~8.14(매일 9~10, 21~22)", 좌표:"37.525925,126.855922" },
 
-  "CV10(42호)": { 분류:"안전조치", 고유이름:"김00", 전화번호:"", 주소:"목동로 193", 특이사항:"7.19~8.17(11~12, 21~22))", 좌표:"37.525567,126.858867" },
+  "CV10(42호)": { 분류:"안전조치", 고유이름:"김00", 전화번호:"", 주소:"목동로 193", 특이사항:"7.19~8.17(매일 11~12, 21~22))", 좌표:"37.525567,126.858867" },
 
-  "CV11(41호)": { 분류:"안전조치", 고유이름:"조00", 전화번호:"", 주소:"신목로5길 15", 특이사항:"7.19~8.18(13~14시)", 좌표:"37.517567,126.872267" },
+  "CV11(41호)": { 분류:"안전조치", 고유이름:"조00", 전화번호:"", 주소:"신목로5길 15", 특이사항:"7.19~8.18(매일 13~14시)", 좌표:"37.517567,126.872267" },
 
-  "CV11-1(41호)": { 분류:"안전조치", 고유이름:"조00", 전화번호:"", 주소:"쌍용아파트 102동", 특이사항:"7.19~8.18(13~14시)", 좌표:"37.518182,126.875558" },
+  "CV11-1(41호)": { 분류:"안전조치", 고유이름:"조00", 전화번호:"", 주소:"쌍용아파트 102동", 특이사항:"7.19~8.18(매일 17~18, 21~22)", 좌표:"37.518182,126.875558" },
 
-  "CV12(41호)": { 분류:"안전조치", 고유이름:"채00", 전화번호:"", 주소:"오목로354 101동", 특이사항:"7.18~8.17(15~16, 22~23)", 좌표:"37.523919,126.876851" },
+  "CV12(41호)": { 분류:"안전조치", 고유이름:"채00", 전화번호:"", 주소:"오목로354 101동", 특이사항:"7.18~8.17(매일 15~16, 22~23)", 좌표:"37.523919,126.876851" },
 
-  "CV13(41호)": { 분류:"안전조치", 고유이름:"김000", 전화번호:"", 주소:"오목로300 204동", 특이사항:"7.31~8.30(05~06, 19~20)", 좌표:"37.524183,126.870829" },
+  "CV13(41호)": { 분류:"안전조치", 고유이름:"김000", 전화번호:"", 주소:"오목로300 204동", 특이사항:"7.31~8.30(매일 05~06, 19~20)", 좌표:"37.524183,126.870829" },
 
   "PP1": { 분류:"공중전화", 고유이름:"PP1", 전화번호:"02-2696-2896", 주소:"목동로 189", 특이사항:"제일은행 앞", 좌표:"37.525392,126.864424" },
 
@@ -327,5 +327,6 @@ window.onload=()=>{initMap();showUpcomingPatrols();setInterval(showUpcomingPatro
 
 </body>
 </html>
+
 
 
