--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     #upcomingPanel.hidden h4, #upcomingPanel.hidden ul { display: none; }
     #upcomingPanel.hidden::after { content: "⏰"; position: absolute; top: 10px; left: 15px; font-size: 20px; color: #007bff; }
   </style>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5qR9rGB6Qv43IYSMoHKhArm5gJdapXGk&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key= "></script>
 </head>
 <body>
 <h3>🚓 함께 만드는 순찰/출동 poi(신정2)</h3>
@@ -327,6 +327,7 @@ window.onload=()=>{initMap();showUpcomingPatrols();setInterval(showUpcomingPatro
 
 </body>
 </html>
+
 
 
 
