--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 <script>
  
 // ② 현재 활성화할 카테고리 (초기값)
-let activeCategories = ["안전조치", "특별순찰"];
+//let activeCategories = ["안전조치", "특별순찰"];
+  let activeCategories = ["안전조치"];
 
 // ③ 카테고리 변경 함수
   function setActiveCategories(selectedCategories) {
@@ -314,6 +315,7 @@ window.onload=()=>{ initMap(); showUpcomingPatrols(); setInterval(showUpcomingPa
 
 </body>
 </html>
+
 
 
 
